--- a/views/forms/form.html
+++ b/views/forms/form.html
@@ -2,13 +2,13 @@
     <div class="col-md-4 col-md-offset-4">
         <div class="row">
             <div class="text-center">
-                <h3>Sales</h3>
+                <h3>{{pageTitle}}</h3>
             </div>
         </div>
         <div class="panel panel-default">
             <div class="panel-body">
                 <form ng-submit="vm.onSubmit()">
-                    <formly-form model="vm.sales" fields="vm.salesFields">
+                    <formly-form model="vm.model" fields="vm.fields">
                         <div class="form-group">
                             <button class="btn btn-lg btn-primary btn-block">Submit</button>
                         </div>
