--- a/views/forms/employee-change-salary.html
+++ b/views/forms/employee-change-salary.html
@@ -1,20 +1,1 @@
-<div class="row">
-    <div class="col-md-4 col-md-offset-4">
-        <div class="row">
-            <div class="text-center">
-                <h3>{{pageTitle}}</h3>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-body">
-                <form ng-submit="vm.onSubmit()">
-                    <formly-form model="vm.model" fields="vm.fields">
-                        <div class="form-group">
-                            <button class="btn btn-lg btn-primary btn-block">Submit</button>
-                        </div>
-                    </formly-form>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
+<ng-include src="CONSTANTS.PATH.BASIC_FORM"/>
